<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gesture_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <FrameLayout
        android:id="@+id/gesture_container_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.way.gesture.view.GestureOverlayView
            android:id="@+id/gesture_overlay_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardElevation="0dip"
            android:alpha="0.9" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:text="@string/drawgesture"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/gesture_settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right|top"
                android:background="?android:attr/listChoiceBackgroundIndicator"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dip"
                android:src="@drawable/ic_settings_black" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/gesture_bottom_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#bbffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gesture_warn_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="2dip"
                android:paddingTop="2dip"
                android:textColor="@color/secondary_text"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gesture_redraw_btn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/getsure_option_redraw"
                    android:textColor="@color/primary"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/gesture_add_btn"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceBackgroundIndicator"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/getsure_option_add"
                    android:textColor="@color/primary"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>